# moveit_sandbox

./: .cproject  .project  CMakeLists.txt  README.md  package.xml  setup.py
launch/: korus_move_group_test.launch  korus_object_information_server.launch  move_group_test.launch
scripts/: add_collision_object.py  attach_collision_object.py
src/: move_group_test.cpp
