<?xml version="1.0"?>
<package>
  <name>moveit_sandbox</name>
  <version>0.0.0</version>
  <description>The moveit_sandbox package</description>
  <maintainer email="marcus@todo.todo">marcus</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://ros.org/wiki/moveit_sandbox</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>moveit_ros_planning_interface</run_depend>
</package>